# vexel

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
vexel/: Cargo.toml  lib.rs
vexel/benches/: decode.rs
vexel/decoders/: avif.rs  bmp.rs  gif.rs  hdr.rs  jpeg.rs  jpeg_ls.rs  mod.rs  netpbm.rs  png.rs  tga.rs  tiff.rs  webp.rs
vexel/decoders/bmp/: compression.rs  decoder.rs  headers.rs  mod.rs  pixels.rs  simd.rs  types.rs
vexel/decoders/gif/: compose_simd.rs  decoder.rs  lzw.rs  mod.rs  types.rs
vexel/decoders/hdr/: decoder.rs  mod.rs  pixels.rs  simd.rs  types.rs
vexel/decoders/ico/: decoder.rs  mod.rs  types.rs
vexel/decoders/jbig1/: arithmetic.rs  decoder.rs  mod.rs  types.rs
vexel/decoders/jpeg/: arithmetic_decoder.bak  bitreader.rs  decoder.rs  idct.rs  markers.rs  mod.rs  types.rs  upsample.rs
vexel/decoders/jpeg_ls/: bitreader.rs  decoder.rs  markers.rs  mod.rs  types.rs
vexel/decoders/netpbm/: decoder.rs  mod.rs  simd.rs  types.rs
vexel/decoders/png/: animation.rs  chunks.rs  crc_simd.rs  decoder.rs  filter_simd.rs  filters.rs  mod.rs  pixels.rs  types.rs
vexel/decoders/tga/: decoder.rs  mod.rs  types.rs
vexel/decoders/tiff/: color.rs  compression.rs  decoder.rs  mod.rs  pixels.rs  reader.rs  types.rs
vexel/fuzz/: Cargo.toml
vexel/fuzz/artifacts/decode_jpeg/: crash-0161442dc33901f16749ba83fd6c79441da49ec1  oom-e61896a767cc05313309e662a58f3d4085b8b33f
vexel/fuzz/fuzz_targets/: decode_any.rs  decode_bmp.rs  decode_gif.rs  decode_hdr.rs  decode_ico.rs  decode_jbig1.rs  decode_jpeg.rs  decode_jpeg_ls.rs  decode_netpbm.rs  decode_png.rs  decode_tga.rs  decode_tiff.rs
vexel/tests/: corpus.rs  generate_references.py  main.rs
vexel/tests/formats/: bmp.rs  gif.rs  hdr.rs  ico.rs  jbig1.rs  jpeg.rs  jpeg_ls.rs  netpbm.rs  png.rs  tga.rs  tiff.rs
vexel/tests/harness/: mod.rs
vexel/tests/images/ico/: kuromi-2bd2e238.cur
vexel/tests/images/jbig1/: 2x2.jbg  fox.jbg
vexel/tests/images/jpeg-ls/: loco_c0_e0_ss_s3_subsampled.jls
vexel/tests/images/netpbm/: P1_multiframe.pbm  P2_multiframe.pgm  P3_multiframe.ppm  P4_multiframe.pbm  P5_multiframe.pgm  P6_multiframe.ppm  P7_grayscale_8bit.pam  P7_grayscale_alpha_16bit.pam  P7_monochrome_alpha.pam  P7_multiframe.pam  P7_rgb_8bit.pam  cmyk.pam  cmyk_alpha.pam
vexel/tests/images/tiff/: memorial_luv32.tif
vexel/tests/references/bmp/: 11Bbos20.avif  11Bgos20.avif  11Bios13.avif  11Bos20.avif  400x300x32_v3_96.avif  64bpp.avif  OS2_2.avif  Parrots.avif  RLE4_2.avif  YES2.avif  ang00_000_007.avif  bmp0_test_image.avif  lena.avif  pal2.avif  pal2color.avif  pal4rletrns.avif  pal8os2v2-16.avif  rgb16-231.avif  rgb16-3103.avif  rgb16-565.avif  rgb16bfdef.avif  rgb16faketrns.avif  rgb24jpeg.avif  rgb24prof2.avif  rgb32-111110.avif  rgb32-7187.avif  rgb32bf.avif  rgb32fakealpha.avif  rgba16-1924.avif  rgba16-4444.avif  rgba16-5551.avif  rgba32-1010102.avif  rgba32-61754.avif  (+6 more)
vexel/utils/: bitreader.rs  channel_simd.rs  deflate.rs  error.rs  exif.rs  icc.rs  image.rs  info.rs  limits.rs  logger.rs  macros.rs  marker.rs  mod.rs  traits.rs  types.rs  writer.rs
vexel/utils/deflate/: simd.rs
(+272 files in other folders)
