[package]
name = "vexel"
version = "0.1.0"
edition = "2021"

[lib]
name = "vexel"
path = "src/lib.rs"

[[bin]]
name = "vexel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.35"
glob = "0.3.1"
pixels = "0.14.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
log = "0.4.22"
image = "0.25.5"
webp = "0.3.0"
webp-animation = "0.9.0"
