[package]
name = "vexel"
version = "0.1.0"
edition = "2021"

[lib]
name = "vexel"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = { version = "1.0.35", features = ["rust_backend"] }
rayon = { version = "1.10.0", optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3.76", features = ["console"] }
js-sys = "0.3.76"

[dev-dependencies]
writer = { path = "../writer" }

[features]
default = ["rayon"]
