[package]
name = "vexel"
version = "0.1.0"
edition = "2021"

[lib]
name = "vexel"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = { version = "1.10.0", optional = true }
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
web-sys = { version = "0.3.76", features = ["console"] }
js-sys = "0.3.76"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.4.5"

[dev-dependencies]
libavif = "0.14.0"
libavif-sys = "0.17.0"
criterion = { version = "0.5", features = ["html_reports"] }
walkdir = "2"

[[bench]]
name = "decode"
harness = false

[features]
default = ["rayon"]
